tests/NormalTests/paczka1/fuzzy1/85697268.err
Error in line 6: 7DT A52 100,0
Error in line 9: 7DT S418 87,0
Error in line 2: R9b A52 68,5
Error in line 5: 3fFmfPBuFCF S418 77,0
Error in line 23: S418 A52 5,8
Error in line 24: S418 A298 97,1
Error in line 29: S418 S418 23,9
Error in line 27: aLYLSYz S418 62,5
